@@ -1,0 +1,19 @@
+//  ____     ___ |    / _____ _____
+// |  __    |    |___/    |     |
+// |___| ___|    |    \ __|__   |     gsKit Open Source Project.
+// ----------------------------------------------------------------------
+// Copyright 2004 - Chris "Neovanglist" Gilbert <Neovanglist@LainOS.org>
+// Licenced under Academic Free License version 2.0
+// Review gsKit README & LICENSE files for further details.
+//
+// dmaCore.h - Header for dmaCore.c
+//
+
+#ifndef __DMACORE_H__
+#define __DMACORE_H__
+
+#include "dmaKit.h"
+
+void dmaKit_DMA_Wait(unsigned int channel);
+
+#endif /* __DMACORE_H__ */
