@@ -1,0 +1,17 @@
+//  ____     ___ |    / _____ _____
+// |  __    |    |___/    |     |
+// |___| ___|    |    \ __|__   |     gsKit Open Source Project.
+// ----------------------------------------------------------------------
+// Copyright 2004 - Chris "Neovanglist" Gilbert <Neovanglist@LainOS.org>
+// Licenced under Academic Free License version 2.0
+// Review gsKit README & LICENSE files for further details.
+//
+// dmaInit.h - Header for dmaInit.c
+//
+
+#ifndef __DMAINIT_H__
+#define __DMAINIT_H__
+
+#include "dmaKit.h"
+
+#endif /* __DMAINIT_H__ */
