@@ -6,7 +6,20 @@
 // Licenced under Academic Free License version 2.0
 // Review gsKit README & LICENSE files for further details.
 //
-// gsCore.c - C/Assembler implimentation of all GS instructions.
+// gsKit.h - Master header for gsKit. Include _ONLY_THIS_HEADER_
+//           for gsKit. (Do NOT include gsFont.h, gsCore.h, etc)
 //
 
-#include "gsKit.h"
+#ifndef __GSKIT_H__
+#define __GSKIT_H__
+
+#include <tamtypes.h>
+
+#include "gsCore.h"
+#include "gsFont.h"
+#include "gsInit.h"
+#include "gsMisc.h"
+#include "gsPrimitive.h"
+#include "gsTexture.h"
+
+#endif /* __GSKIT_H__ */
